@@ -5,14 +5,14 @@ Available constructor:
     BetaFactory()
 
 Let :math:`n` be the sample sample size. 
-Let :math:`x_{min}` be the sample minimum and :math:`x_{max}` be the sample maximum. 
+Let :math:`x_{(1)}` be the sample minimum and :math:`x_{(n)}` be the sample maximum.
 Let :math:`\delta` be the sample range:
 
 .. math::
     :nowrap:
 
     \begin{eqnarray*}
-      \displaystyle \delta = x_{max} - x_{min}.
+      \delta = x_{(n)} - x_{(1)}.
     \end{eqnarray*}
 
 Then the distribution bounds are computed from the equations:
@@ -21,20 +21,20 @@ Then the distribution bounds are computed from the equations:
     :nowrap:
 
     \begin{eqnarray*}
-      \displaystyle\Hat{a}_n = x_{min} - \frac{\delta}{n + 2}, \\
-      \displaystyle\Hat{b}_n = x_{max} + \frac{\delta}{n + 2}.
+      \hat{a} &=& x_{(1)} - \frac{\delta}{n + 2}, \\
+      \hat{b} &=& x_{(n)} + \frac{\delta}{n + 2}.
     \end{eqnarray*}
 
-Let :math:`\bar{x}_n` be the sample mean and :math:`\hat{\sigma}_n` be the sample 
-standard deviation. 
-The remaining parameters are estimated from the method of moments:
+Let :math:`\bar{x}` be the sample mean and :math:`\hat{\sigma}^2` be the sample
+unbiased variance.
+The remaining parameters are estimated using the method of moments:
 
 .. math::
     :nowrap:
 
     \begin{eqnarray*}
-      \displaystyle\Hat{t}_n=\frac{(\Hat{b}_n-\bar{x}_n)(\bar{x}_n-\Hat{a}_n)}{\hat{\sigma}_n^2-1}\\
-      \displaystyle\Hat{r}_n=\frac{\displaystyle\Hat{t}_n (\bar{x}_n-\Hat{a}_n)}{\Hat{b}_n-\Hat{a}_n}
+      \hat{\alpha} & = & \left(\frac{\bar{x} - \hat{a}}{\hat{b} - \hat{a}}\right) \left( \frac{\left(\hat{b} - \bar{x}\right)\left(\bar{x} - \hat{a}\right)}{\hat{\sigma}^2}-1\right) \\
+      \hat{\beta}  & = & \left(\frac{\hat{b} - \bar{x}}{\bar{x} - \hat{a}}\right) \hat{\alpha}
     \end{eqnarray*}
 
 See also
